970-api-services-beans/src/test/resources/istio/HttpVirtualServiceWithHeaderTest.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-vs
spec:
  hosts:
  - host1
  - host2
  http:
  - match:
    - header:
        cookie:
          regex: ^(.*?;)?(type=insider)(;.*)?$
        user-agent:
          regex: .*Android.*
      name: istio-http-uri-rule-1
    route:
    - destination:
        host: test-svc
      weight: 80
    - destination:
        host: test-svc-stage
      weight: 20
