970-api-services-beans/src/test/resources/istio/HttpVirtualServiceWithMethodTest.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-vs
spec:
  gateways:
  - istio-test-gateway
  hosts:
  - host1
  - host2
  http:
  - match:
    - method:
        exact: GET
      name: istio-http-uri-rule-1
    route:
    - destination:
        host: test-svc
      weight: 80
    - destination:
        host: test-svc-stage
      weight: 20
