970-api-services-beans/src/test/resources/istio/HttpVirtualServiceWithPortTest.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-vs
spec:
  hosts:
  - host1
  - host2
  http:
  - match:
    - name: istio-http-uri-rule-1
      port: 8080
    route:
    - destination:
        host: test-svc
      weight: 80
    - destination:
        host: test-svc-stage
      weight: 20
